apps/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-app
  namespace: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-app
  template:
    metadata:
      labels:
        app: whoami-app
    spec:
      containers:
      - name: whoami-app
        image: ghcr.io/traefik/whoami
        imagePullPolicy: Always
        ports:
        - containerPort: 80
